tests/exceptions/ill-typed/exception-type-not-declared-try-with.stella
language core;

extend with #exceptions, #exception-type-declaration;

fn fail(n : Nat) -> Bool {
  return throw(succ(0))
}

fn main(n : Nat) -> Bool {
  return try { fail(n) } with { false }
}
